[package]
name = "aoc_2015"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_01"
path = "src/bin/day_01/day_01.rs"

[[bin]]
name = "day_02"
path = "src/bin/day_02/day_02.rs"

[[bin]]
name = "day_03"
path = "src/bin/day_03/day_03.rs"

[[bin]]
name = "day_04"
path = "src/bin/day_04/day_04.rs"

[[bin]]
name = "day_05"
path = "src/bin/day_05/day_05.rs"

[[bin]]
name = "day_06"
path = "src/bin/day_06/day_06.rs"

[[bin]]
name = "day_07"
path = "src/bin/day_07/day_07.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
tailcall = "0.1.5"
regex = "1.10.2"
once_cell = "1.19.0"
